# kcalc

./: .gitattributes  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  unit.xml
.github/workflows/: docs.yaml
devtools/envs/: base.yaml
docs/: development.md
kcalc/: __init__.py  _cli.py  _version.py  conversion.py
kcalc/tests/: test_kcalc.py
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/development/: index.html
latest/reference/: index.html
latest/reference/SUMMARY/: index.html
latest/reference/conversion/: index.html
latest/scripts/: gen_ref_pages.py
latest/search/: search_index.json
