[build-system]
requires = ["setuptools>=61.0", "wheel", "versioneer"]
build-backend = "setuptools.build_meta"

[project]
name = "kcalc"
description = "a kcalc"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]

[project.scripts]
kcalc = "kcalc._cli:main"

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "kcalc.__version__"}

[tool.setuptools.packages.find]
namespaces = true
where = ["."]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "kcalc/_version.py"
versionfile_build = "kcalc/_version.py"
tag_prefix = ""
parentdir_prefix = "kcalc-"

[tool.ruff.lint]
ignore = ["C901", "E501"]
select = ["B","C","E","F","W","B9"]
ignore-init-module-imports = true

[tool.coverage.run]
omit = ["**/tests/*", "**/_version.py"]

[tool.coverage.report]
exclude_lines = [
    "@overload",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
